// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ables format snapshot 1`] = `
Object {
  "_reduce": Object {
    "hash": Object {},
    "list": Array [],
  },
  "_reduce.group.": Object {
    "list": Array [],
  },
  "_reduce.group.GM": Object {
    "list": Array [],
  },
  "_reduce.group.POTOF": Object {
    "list": Array [],
  },
  "_reduce.group.STATUS": Object {
    "list": Array [],
  },
}
`;

exports[`chr_jobs format snapshot 1`] = `
Object {
  "_reduce": Object {
    "hash": Object {},
    "list": Array [],
  },
}
`;

exports[`chr_npcs format snapshot 1`] = `
Object {
  "_reduce": Object {
    "hash": Object {},
    "list": Array [],
  },
}
`;

exports[`chr_sets format snapshot 1`] = `
Object {
  "_reduce": Object {
    "hash": Object {},
    "list": Array [],
  },
}
`;

exports[`faces format snapshot 1`] = `
Object {
  "_reduce": Object {
    "hash": Object {},
    "list": Array [],
  },
  "_reduce.all.all": Object {
    "count": 0,
  },
  "_reduce.name_head.ア": Object {
    "hash": Object {},
  },
  "_reduce.name_head.イ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ウ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.エ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.オ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.カ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ガ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.キ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ギ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ク": Object {
    "hash": Object {},
  },
  "_reduce.name_head.グ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ケ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ゲ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.コ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ゴ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.サ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ザ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.シ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ジ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ス": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ズ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.セ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ゼ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ソ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ゾ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.タ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ダ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.チ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ツ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.テ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.デ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ト": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ド": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ナ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ニ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ヌ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ネ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ノ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ハ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.バ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.パ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ヒ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ビ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ピ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.フ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ブ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.プ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ヘ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ベ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ペ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ホ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ボ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ポ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.マ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ミ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ム": Object {
    "hash": Object {},
  },
  "_reduce.name_head.メ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.モ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ヤ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ユ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ヨ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ラ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.リ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ル": Object {
    "hash": Object {},
  },
  "_reduce.name_head.レ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ロ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ワ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ン": Object {
    "hash": Object {},
  },
  "_reduce.name_head.ヴ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.一": Object {
    "hash": Object {},
  },
  "_reduce.name_head.丁": Object {
    "hash": Object {},
  },
  "_reduce.name_head.亀": Object {
    "hash": Object {},
  },
  "_reduce.name_head.仁": Object {
    "hash": Object {},
  },
  "_reduce.name_head.余": Object {
    "hash": Object {},
  },
  "_reduce.name_head.八": Object {
    "hash": Object {},
  },
  "_reduce.name_head.勝": Object {
    "hash": Object {},
  },
  "_reduce.name_head.勢": Object {
    "hash": Object {},
  },
  "_reduce.name_head.博": Object {
    "hash": Object {},
  },
  "_reduce.name_head.参": Object {
    "hash": Object {},
  },
  "_reduce.name_head.団": Object {
    "hash": Object {},
  },
  "_reduce.name_head.夕": Object {
    "hash": Object {},
  },
  "_reduce.name_head.大": Object {
    "hash": Object {},
  },
  "_reduce.name_head.奈": Object {
    "hash": Object {},
  },
  "_reduce.name_head.定": Object {
    "hash": Object {},
  },
  "_reduce.name_head.小": Object {
    "hash": Object {},
  },
  "_reduce.name_head.志": Object {
    "hash": Object {},
  },
  "_reduce.name_head.慶": Object {
    "hash": Object {},
  },
  "_reduce.name_head.攻": Object {
    "hash": Object {},
  },
  "_reduce.name_head.日": Object {
    "hash": Object {},
  },
  "_reduce.name_head.明": Object {
    "hash": Object {},
  },
  "_reduce.name_head.春": Object {
    "hash": Object {},
  },
  "_reduce.name_head.朔": Object {
    "hash": Object {},
  },
  "_reduce.name_head.朝": Object {
    "hash": Object {},
  },
  "_reduce.name_head.朧": Object {
    "hash": Object {},
  },
  "_reduce.name_head.梅": Object {
    "hash": Object {},
  },
  "_reduce.name_head.櫻": Object {
    "hash": Object {},
  },
  "_reduce.name_head.沙": Object {
    "hash": Object {},
  },
  "_reduce.name_head.沼": Object {
    "hash": Object {},
  },
  "_reduce.name_head.法": Object {
    "hash": Object {},
  },
  "_reduce.name_head.源": Object {
    "hash": Object {},
  },
  "_reduce.name_head.玖": Object {
    "hash": Object {},
  },
  "_reduce.name_head.甚": Object {
    "hash": Object {},
  },
  "_reduce.name_head.直": Object {
    "hash": Object {},
  },
  "_reduce.name_head.稲": Object {
    "hash": Object {},
  },
  "_reduce.name_head.竹": Object {
    "hash": Object {},
  },
  "_reduce.name_head.網": Object {
    "hash": Object {},
  },
  "_reduce.name_head.置": Object {
    "hash": Object {},
  },
  "_reduce.name_head.舷": Object {
    "hash": Object {},
  },
  "_reduce.name_head.芙": Object {
    "hash": Object {},
  },
  "_reduce.name_head.菊": Object {
    "hash": Object {},
  },
  "_reduce.name_head.華": Object {
    "hash": Object {},
  },
  "_reduce.name_head.藤": Object {
    "hash": Object {},
  },
  "_reduce.name_head.辰": Object {
    "hash": Object {},
  },
  "_reduce.name_head.鉄": Object {
    "hash": Object {},
  },
  "_reduce.name_head.錠": Object {
    "hash": Object {},
  },
  "_reduce.name_head.鏡": Object {
    "hash": Object {},
  },
  "_reduce.name_head.雪": Object {
    "hash": Object {},
  },
  "_reduce.name_head.雷": Object {
    "hash": Object {},
  },
  "_reduce.name_head.露": Object {
    "hash": Object {},
  },
  "_reduce.name_head.鬼": Object {
    "hash": Object {},
  },
  "_reduce.name_head.麻": Object {
    "hash": Object {},
  },
  "_reduce.name_head.黍": Object {
    "hash": Object {},
  },
  "_reduce.name_head.Ａ": Object {
    "hash": Object {},
  },
  "_reduce.name_head.Ｐ": Object {
    "hash": Object {},
  },
  "_reduce.tag.animal": Object {
    "count": 0,
  },
  "_reduce.tag.apartment": Object {
    "count": 0,
  },
  "_reduce.tag.asia": Object {
    "count": 0,
  },
  "_reduce.tag.ecclesia": Object {
    "count": 0,
  },
  "_reduce.tag.elder": Object {
    "count": 0,
  },
  "_reduce.tag.elegant": Object {
    "count": 0,
  },
  "_reduce.tag.fable": Object {
    "count": 0,
  },
  "_reduce.tag.farm": Object {
    "count": 0,
  },
  "_reduce.tag.giji": Object {
    "count": 0,
  },
  "_reduce.tag.god": Object {
    "count": 0,
  },
  "_reduce.tag.government": Object {
    "count": 0,
  },
  "_reduce.tag.guild": Object {
    "count": 0,
  },
  "_reduce.tag.immoral": Object {
    "count": 0,
  },
  "_reduce.tag.kid": Object {
    "count": 0,
  },
  "_reduce.tag.marchen": Object {
    "count": 0,
  },
  "_reduce.tag.market": Object {
    "count": 0,
  },
  "_reduce.tag.medical": Object {
    "count": 0,
  },
  "_reduce.tag.middle": Object {
    "count": 0,
  },
  "_reduce.tag.myth": Object {
    "count": 0,
  },
  "_reduce.tag.pair": Object {
    "count": 0,
  },
  "_reduce.tag.river": Object {
    "count": 0,
  },
  "_reduce.tag.road": Object {
    "count": 0,
  },
  "_reduce.tag.school": Object {
    "count": 0,
  },
  "_reduce.tag.servant": Object {
    "count": 0,
  },
  "_reduce.tag.shoji": Object {
    "count": 0,
  },
  "_reduce.tag.stratos": Object {
    "count": 0,
  },
  "_reduce.tag.travel": Object {
    "count": 0,
  },
  "_reduce.tag.young": Object {
    "count": 0,
  },
}
`;

exports[`folders format snapshot 1`] = `
Object {
  "_reduce": Object {
    "hash": Object {},
    "list": Array [],
  },
}
`;

exports[`locales format snapshot 1`] = `
Object {
  "_reduce": Object {
    "hash": Object {},
    "list": Array [],
  },
}
`;

exports[`randoms format snapshot 1`] = `
Object {
  "_reduce": Object {
    "hash": Object {},
    "list": Array [],
  },
  "_reduce.ratio": Object {
    "all": 0,
    "count": 0,
  },
  "_reduce.type.chess": Object {
    "count": 0,
  },
  "_reduce.type.coin": Object {
    "count": 0,
  },
  "_reduce.type.planet": Object {
    "count": 0,
  },
  "_reduce.type.tarot": Object {
    "count": 0,
  },
  "_reduce.type.trump": Object {
    "count": 0,
  },
  "_reduce.type.weather": Object {
    "count": 0,
  },
  "_reduce.type.zodiac": Object {
    "count": 0,
  },
}
`;

exports[`roles format snapshot 1`] = `
Object {
  "_reduce": Object {
    "hash": Object {},
    "list": Array [],
  },
  "_reduce.group.": Object {
    "list": Array [],
  },
  "_reduce.group.BIND": Object {
    "list": Array [],
  },
  "_reduce.group.EVENT": Object {
    "list": Array [],
  },
  "_reduce.group.EVIL": Object {
    "list": Array [],
  },
  "_reduce.group.HUMAN": Object {
    "list": Array [],
  },
  "_reduce.group.LIVE": Object {
    "list": Array [],
  },
  "_reduce.group.MOB": Object {
    "list": Array [],
  },
  "_reduce.group.OTHER": Object {
    "list": Array [],
  },
  "_reduce.group.PIXI": Object {
    "list": Array [],
  },
  "_reduce.group.SPECIAL": Object {
    "list": Array [],
  },
  "_reduce.group.TURN": Object {
    "list": Array [],
  },
  "_reduce.group.WOLF": Object {
    "list": Array [],
  },
}
`;

exports[`sow_roletables format snapshot 1`] = `
Object {
  "_reduce": Object {
    "hash": Object {},
    "list": Array [],
  },
}
`;

exports[`tags format snapshot 1`] = `
Object {
  "_reduce": Object {
    "hash": Object {},
    "list": Array [],
  },
}
`;

exports[`traps format snapshot 1`] = `
Object {
  "_reduce": Object {
    "hash": Object {},
    "list": Array [],
  },
}
`;
